2006-04-12  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, admin/VisualStudio6/alut/alut.dsp,
	admin/VisualStudioDotNET/alut/alut.vcproj, admin/autotools/.indent.pro,
	configure.ac, include/AL/alut.h, src/Makefile.am, src/alutBufferData.c,
	src/alutInternal.h, src/alutLoader.c, src/alutUtil.c,
	src/alutWaveform.c: Implemented alutLoadMemoryHelloWorld and
	alutLoadMemoryWaveform. Refactored things internally a bit, mainly by
	making an InputStream the central kind of sound data source. Introduced
	the OutputStream type for generating built-in sounds. Bumped the package
	version to 1.1.0 and the library version to 1:0:1 (i.e. a backwards
	compatible version, only with new features). Added --enable-efence
	configure option.

	* src/alutOutputStream.c: Added.

	* doc/alut.html: Added a few missing ALUT_ERROR_OUT_OF_MEMORY error
	conditions in the descriptions of the loaders. Added
	alutLoadMemoryHelloWorld and alutLoadMemoryWaveform. Bumped spec version
	to 1.1.0.

	* doc/alut.css: Added a remark how to make the headers stand out a
	little bit more.

2006-04-10  Sven Panne  <sven.panne@aedion.de>

	* doc/alut.html: Fixed foo-config documentation. Minor cleanup.

2006-03-05  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindSleepFunction.cmake: sync to OpenAL version

	* Makefile.am: add CMake Modules to EXTRA_DIST

	* CMakeLists.txt: make more windows friendly; variables
	OPENAL_INCLUDE_DIR and OPENAL_LIB_DIR introduced

2006-02-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Added version info.

2006-02-16  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: don't check for unistd.h twice

2006-02-13  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: forgot to delete old visibility macro; use OpenAL
	module for sleep function detection; define _POSIX_C_SOURCE and add
	comments from configure.ac

2006-02-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: We might need nanosleep, which is a POSIX IEEE Std